# toxicity-classification-module

./: .gitignore  Dockerfile  LICENSE.md  README.md  main.py  pyproject.toml  requirements.txt  setup.py  tox.ini
toxicity-classifier/: __init__.py  toxicity-classifier.py
toxicity-classifier/models/: RussianVectorizer.bf
toxicityclassifier/: __init__.py  toxicityclassifier.py
toxicityclassifier/models/: EnglishModel.bf  RussianModel.bf
