[tool.poetry]
name = "toxicityclassifier"
version = "0.1.6"
description = "module for predicting toxicity messages in Russian and English"
authors = ["D1ffic00lt <dm.filinov@gmail.com>"]
license = "MIT License"
readme = "README.md"
homepage = "https://github.com/D1ffic00lt/toxicity-classification-module"
repository = "https://github.com/D1ffic00lt/toxicity-classification-module"
documentation = "https://github.com/D1ffic00lt/toxicity-classification-module"

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "setuptools>=43.0.0",
    "wheel",
    "langdetect>=1.0.9",
    "pandas>=1.4.1",
    "scikit-learn>=1.0.2",
    "numpy>=1.22.2",
    "nltk>=3.7",
    "tqdm>=4.62.3",
    "pandas>=1.4.1",
    "numpy>=1.22.2"
]
build-backend = "poetry.core.masonry.api"
