[tool.poetry]
name = "toxicityclassifier"
version = "0.1.10"
description = "Module encoding and encrypting text by key"
authors = ["D1ffic00lt <dm.filinov@gmail.com>"]
license = "MIT License"
homepage = "https://github.com/D1ffic00lt/toxicity-classification-module"
repository = "https://github.com/D1ffic00lt/toxicity-classification-module"
documentation = "https://github.com/D1ffic00lt/toxicity-classification-module/blob/main/README.md"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "setuptools>=43.0.0",
    "wheel",
    "langdetect>=1.0.9",
    "pandas>=1.4.1",
    "scikit-learn>=1.0.2",
    "numpy>=1.22.2",
    "nltk>=3.7",
    "tqdm>=4.62.3",
    "pandas>=1.4.1",
    "numpy>=1.22.2"
]
build-backend = "poetry.core.masonry.api"